<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/orderingQuestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/orderingQuestionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionNoTemplate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/clearIconIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/undo_icon_cont_desc"
            android:src="@drawable/ic_content_undo" />
    </RelativeLayout>

    <TextView
        android:id="@+id/orderingQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/orderingOption1TV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/ordering_option_1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/orderingOption2TV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/ordering_option_2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/orderingOption3TV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/ordering_option_3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choice_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choice"
        android:gravity="center"
        android:text="@string/ordering_choice_1" />

    <TextView
        android:id="@+id/choice_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choice"
        android:gravity="center"
        android:text="@string/ordering_choice_2" />

    <TextView
        android:id="@+id/choice_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choice"
        android:gravity="center"
        android:text="@string/ordering_choice_3" />

</LinearLayout>