<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/difficultyModeTVLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_mode_label" />

    <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dmRG">

        <RadioButton
            android:id="@+id/dmRB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dm_1"/>

        <RadioButton
            android:id="@+id/dmRB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dm_2" />

        <RadioButton
            android:id="@+id/dmRB3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dm_3" />
    </RadioGroup>

</LinearLayout>