<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/aboutImgIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal" 
        android:paddingTop="20dp"
        android:contentDescription="@string/about_img_cont_desc"/>

    <TextView
        android:id="@+id/aboutTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_gravity="center_horizontal" />
    
    <TextView
        android:id="@+id/aboutSubtitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_subtitle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="center_horizontal"  />

</LinearLayout>
